1.进程间通信,ContentProvider,创建provider,服务器端BookProvider,客户端访问BookProviderActivity 2.bean实现Parcelable接口User1,Book,以后尽量使用Parcelable,因为aidl不支持Serializable接口 3.Binder连接池,处理多个aidl的情况,创建一个BinderPool,只要使用一个Service就可以完成任务了(testModule)

--- a/app/src/main/res/layout/fragment_share_file.xml
+++ b/app/src/main/res/layout/fragment_share_file.xml
@@ -21,6 +21,16 @@
             android:layout_height="wrap_content"
             android:text="@string/btn_aidl"
             android:textAllCaps="false"/>
+    <Button android:id="@+id/btn_provider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_provider"
+            android:textAllCaps="false"/>
+    <Button android:id="@+id/btn_socket_tcp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_socket_tcp"
+            android:textAllCaps="false"/>
     <TextView android:id="@+id/tv_content"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
