--- a/testmodule/src/main/res/layout/activity_main.xml
+++ b/testmodule/src/main/res/layout/activity_main.xml
@@ -21,8 +21,14 @@
             android:layout_height="wrap_content"
             android:onClick="jump"
             android:text="jump"/>
+    <Button android:id="@+id/btn_binder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_binder"
+            android:textAllCaps="false"/>
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"/>
 </LinearLayout>
