1.进程间通信,Socket通信失败 2.Binder线程池从testModule中考到APP中,Binder这个例子中的解耦做的比较好,有时间多看一下

--- a/app/src/main/res/layout/fragment_share_file.xml
+++ b/app/src/main/res/layout/fragment_share_file.xml
@@ -31,6 +31,11 @@
             android:layout_height="wrap_content"
             android:text="@string/btn_socket_tcp"
             android:textAllCaps="false"/>
+    <Button android:id="@+id/btn_binder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_binder"
+            android:textAllCaps="false"/>
     <TextView android:id="@+id/tv_content"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
