app 1.View移动,弹性滑动,使用属性动画效果,实现弹性滑动ValueAnimator和ObjectAnimator(ViewFragment)

--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -4,17 +4,32 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
     <TextView android:id="@+id/tv_content"
-              android:text="@string/app_name"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"/>
-    <Button android:layout_width="wrap_content"
-            android:id="@+id/btn_move"
-            android:text="btn_move"
-            android:textAllCaps="false"
-            android:layout_height="wrap_content"/>
-    <ImageView android:layout_width="wrap_content"
-               android:id="@+id/img"
-               android:src="@mipmap/mm5"
+              android:layout_height="wrap_content"
+              android:text="@string/app_name"/>
+    <Button android:id="@+id/btn_reset_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="resetImg"
+            android:textAllCaps="false"/>
+    <Button android:id="@+id/btn_move_property"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="property(ObjectAnimator)"
+            android:textAllCaps="false"/>
+    <Button android:id="@+id/btn_move_property2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="property2(ValueAnimator)"
+            android:textAllCaps="false"/>
+    <Button android:id="@+id/btn_move_params"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="params"
+            android:textAllCaps="false"/>
+    <ImageView android:id="@+id/img"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
                android:background="#ff0000"
-               android:layout_height="wrap_content"/>
+               android:src="@mipmap/mm5"/>
 </LinearLayout>
