1.控件cardView和Tablayout举例 2.ViewPager+Fragment

--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -10,7 +10,7 @@
     tools:context="com.syl.androidart.activity.NavigationActivity">
 
     <FrameLayout
-        android:id="@+id/content"
+        android:id="@+id/fragment_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
