--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <!--菜单-->
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_system_view"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home"/>
 
