--- a/app/src/main/res/layout/fragment_file.xml
+++ b/app/src/main/res/layout/fragment_file.xml
@@ -25,4 +25,13 @@
             android:layout_height="wrap_content"
             android:onClick="click"
             android:text="@string/btn_read_file"/>
+    <Button android:id="@+id/btn_web_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="click"
+            android:textAllCaps="false"
+            android:text="@string/btn_web_view"/>
+    <WebView android:id="@+id/wv"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"/>
 </LinearLayout>
