--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -15,7 +15,7 @@
         android:icon="@android:drawable/ic_menu_slideshow"
         android:title="@string/title_image"/>
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_frameworks"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications"/>
+        android:title="@string/title_frameworks"/>
 </menu>
