--- a/app/src/main/res/layout/fragment_image_load.xml
+++ b/app/src/main/res/layout/fragment_image_load.xml
@@ -27,4 +27,8 @@
             android:text="Universal Image Loader"
             android:textAllCaps="false"
             android:textSize="25sp"/>
+
+    <ImageView android:id="@+id/iv_img"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"/>
 </LinearLayout>
